<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/background_gradient_blue"
    tools:context=".Activities.ForgotPassword">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="logo_image"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_lock"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/forgot_header"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/enter_mail"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/typeEmail"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            android:textColorHint="@color/white"
            style="@style/TextLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/theme_dark_blue"
        android:text="@string/send_reset"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/forgot_hint"/>

</LinearLayout>