<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp"

    android:background="@drawable/background_gradient_blue"
    tools:context=".Activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/login_language_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_blue_button"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/default_rounded_corner_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fa_solid_900"
                android:text="@string/fa_language"
                android:textSize="30sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_half"
                android:fontFamily="@font/poppins_medium"
                android:paddingTop="2dp"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="end"
            android:transitionName="logo_image"
            android:background="@drawable/ic_icon"/>
    </LinearLayout>

    <TextView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/login_subheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="-10dp"
        android:transitionName="logo_subtext"
        android:text="@string/sign_in_continue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            android:textColorHint="@color/white"
            style="@style/TextLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:transitionName="logo_firstopt"
                android:inputType="text"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            android:textColorHint="@color/white"
            app:passwordToggleEnabled="true"
            style="@style/TextLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="logo_lastopt"
                android:textColor="@color/white"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forget_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/forget_pass"
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:elevation="0dp"/>

        <RadioGroup
            android:id="@+id/login_modeRadioGroup"
            android:layout_width="@dimen/component_width"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:checkedButton="@id/login_parent_mode"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/login_parent_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@color/transparent"
                android:button="@drawable/selector_parent_mode"
                android:textAppearance="@null" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/login_child_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/transparent"
                android:button="@drawable/selector_child_mode" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="@dimen/component_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/default_margin_half"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@color/light_blue"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/parent_mode"
                android:textColor="@color/white"
                android:textAlignment="center" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/light_blue"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/child_mode"
                android:textColor="@color/white"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/theme_dark_blue"
        android:text="@string/sign_in"
        android:transitionName="logo_button"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_noaccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/new_user"
            android:transitionName="logo_subbutton"
            android:textColor="@color/white"
            android:elevation="0dp"/>

        <Button
            android:id="@+id/sos_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/use_sos"
            android:transitionName="logo_subbutton"
            android:textColor="@color/white"
            android:elevation="0dp"/>
    </LinearLayout>



</LinearLayout>