<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/background_gradient_blue"
    tools:context=".Activities.ChildProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_black"
            android:text="@string/select_profile"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:text="@string/select_profile_description" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/select_profile_no_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/no_profiles_found"
            android:textAlignment="center"
            android:visibility="gone" />

        <ListView
            android:id="@+id/select_child_list"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/default_top_margin" />

        <ProgressBar
            android:id="@+id/select_child_progressbar"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:elevation="20dp"
        android:minWidth="@dimen/component_width"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/fa_solid_900"
                android:gravity="center_vertical"
                android:text="@string/fa_child"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/child_select_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="2dp"
                android:layout_weight="6"
                android:background="@null"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/child_name"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Button
                android:id="@+id/child_name_submit"
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/theme_dark_green"
                android:textColor="@color/white"
                android:textSize="@dimen/default_button_text_size"
                android:text="@string/submit" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>